2005-10-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/Makefile.am:
	* hw/darwin/Makefile.am:
	Add darwin to dist

	* hw/xfree86/doc/Makefile.am:
	* hw/xfree86/doc/devel/Makefile.am:
	Include missing docs in EXTRA_DIST

	* hw/xwin/Makefile.am:
	Include headers and other files in dist
	
2005-10-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xkb/Makefile.am:
	Add README.compiled to dist tarball

2005-10-06  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/dmx/examples/Makefile.am: 
	Don't build "ev" example on systems without <linux/input.h>

2005-10-06  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/parser/Makefile.am: Add cpconfig.c to EXTRA_DIST.
	* hw/xfree86/ramdac/Makefile.am: Add CURSOR.NOTES to EXTRA_DIST.
	* hw/xfree86/scanpci/Makefile.am: Add extrapci.ids to EXTRA_DIST
	and fix xf86PciIds.h rule.

2005-10-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/vfb/Makefile.am:
	Install correct man page and add to dist

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/dmx/doc/Makefile.am:
	* hw/dmx/examples/Makefile.am:
	* hw/dmx/input/Makefile.am:
	Add support for building DMX config and examples programs
	Add missing files to EXTRA_DIST
	Install Xdmx man page

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* hw/xfree86/fbdevhw/Makefile.am:
	Clean up generated files to pass distcheck

	* hw/xfree86/getconfig/Makefile.am:
	Clean up generated files to pass distcheck
	Distribute getconfig.man.pre, not getconfig.man

2005-10-05  Kristian Høgsberg  <krh@redhat.com>

	* afb/Makefile.am:
	* cfb/Makefile.am:
	* configure.ac:
	* dix/Makefile.am:
	* fb/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/dixmods/extmod/Makefile.am:
	Add DGA configure option and add various files that we should be
	dist'ing.  Simplify xf86DefModeSet.c rule a bit.

2005-10-05  Adam Jackson  <ajax@freedesktop.org>
