@@ -1,0 +1,1 @@
+SUBDIRS = init.d profile.d Xsession.d
