@@ -1,0 +1,1 @@
+EXTRA_DIST = cde_xsessiond_xprint.sh
