@@ -1,0 +1,1 @@
+EXTRA_DIST = xprint.csh xprint.sh
